--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "formik": "^2.2.9",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-reveal": "^1.2.2",
+    "socket.io-client": "^4.6.1",
+    "typewriter-effect": "^2.19.0",
+    "yup": "^1.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
