--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "axios": "^1.3.4",
     "formik": "^2.2.9",
+    "javascript-time-ago": "^2.5.9",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-reveal": "^1.2.2",
+    "react-time-ago": "^7.2.1",
+    "react-toastify": "^9.1.1",
     "socket.io-client": "^4.6.1",
     "typewriter-effect": "^2.19.0",
     "yup": "^1.0.0"
@@ -23,6 +30,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.7"
   }
 }
