Chat functionality - DONE

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_BASE_URL_API = "http://localhost:3001/api"
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 NEXT_PUBLIC_JWT_SECRET="jadsoajfdaio9#3029@#"
+NEXT_PUBLIC_APP_SERVER_URL="http://localhost:3001"
