--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
     "javascript-time-ago": "^2.5.9",
@@ -22,6 +23,8 @@
     "react-modal": "^3.16.1",
     "react-reveal": "^1.2.2",
     "react-time-ago": "^7.2.1",
+    "react-to-pdf": "^0.0.14",
+    "react-to-print": "^2.14.12",
     "react-toastify": "^9.1.1",
     "socket.io-client": "^4.6.1",
     "typewriter-effect": "^2.19.0",
